--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 
-		<title>reveal.js - The HTML Presentation Framework</title>
+		<title>HtmlUnit: Cornersides, Hints and Tricks</title>
 
 		<meta name="description" content="A framework for easily creating beautiful presentations using HTML">
 		<meta name="author" content="Hakim El Hattab">
@@ -15,7 +15,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
 		<link rel="stylesheet" href="css/reveal.min.css">
-		<link rel="stylesheet" href="css/theme/default.css" id="theme">
+		<link rel="stylesheet" href="css/theme/beige.css" id="theme">
 
 		<!-- For syntax highlighting -->
 		<link rel="stylesheet" href="lib/css/zenburn.css">
@@ -38,56 +38,78 @@
 			<div class="slides">
 
 				<section>
-					<h1>Reveal.js</h1>
-					<h3>HTML Presentations Made Easy</h3>
+					<h1>HtmlUnit</h1>
+					<h3>Cornersides, hints and tricks</h3>
 					<p>
-						<small>Created by <a href="http://hakim.se">Hakim El Hattab</a> / <a href="http://twitter.com/hakimel">@hakimel</a></small>
+						<small>Created by <a href="http://rodush.com">Roman Dushko</a> / <a href="mailto:rdushko@cogniance.com">rdushko</a></small>
 					</p>
 				</section>
 
-				<section>
-					<h2>Heads Up</h2>
-					<p>
-						reveal.js is a framework for easily creating beautiful presentations using HTML. You'll need a browser with
-						support for CSS 3D transforms to see it in its full glory.
-					</p>
+                <section>
+                    <blockquote>
+                        HtmlUnit is a "GUI-Less browser for Java programs".
+                        It models HTML documents and provides an API that allows you to invoke pages, fill out forms,
+                        click links, etc... just like you do in your "normal" browser.
+                    </blockquote>
+                </section>
 
-					<aside class="notes">
-						Oh hey, these are some notes. They'll be hidden in your presentation, but you can see them if you open the speaker notes window (hit 's' on your keyboard).
-					</aside>
+				<section>
+					<h2>Why?</h2>
+					<ul>
+                        <li>Functional testing - QAs</li>
+                        <li>Screen Scraping - DEVs</li>
+					</ul>
 				</section>
 
-				<!-- Example of nested vertical slides -->
-				<section>
-					<section>
-						<h2>Vertical Slides</h2>
-						<p>
-							Slides can be nested inside of other slides,
-							try pressing <a href="#" class="navigate-down">down</a>.
-						</p>
-						<a href="#" class="image navigate-down">
-							<img width="178" height="238" src="https://s3.amazonaws.com/hakim-static/reveal-js/arrow.png" alt="Down arrow">
-						</a>
-					</section>
-					<section>
-						<h2>Basement Level 1</h2>
-						<p>Press down or up to navigate.</p>
-					</section>
-					<section>
-						<h2>Basement Level 2</h2>
-						<p>Cornify</p>
-						<a class="test" href="http://cornify.com">
-							<img width="280" height="326" src="https://s3.amazonaws.com/hakim-static/reveal-js/cornify.gif" alt="Unicorn">
-						</a>
-					</section>
-					<section>
-						<h2>Basement Level 3</h2>
-						<p>That's it, time to go back up.</p>
-						<a href="#/2" class="image">
-							<img width="178" height="238" src="https://s3.amazonaws.com/hakim-static/reveal-js/arrow.png" alt="Up arrow" style="-webkit-transform: rotate(180deg);">
-						</a>
-					</section>
-				</section>
+                <section>
+                    <h2>What do I need to know?</h2>
+                    <ul>
+                        <li>Be comfortable with Java syntax</li>
+                        <li>Able to compile Java classes</li>
+                        <li>Understand HTML and a little bit - JS</li>
+                        <li><a href="http://htmlunit.sourceforge.net/">HtmlUnit</a> library itself</li>
+                    </ul>
+                </section>
+
+                <section>
+                    <h2>How does it look like to the server?</h2>
+                    <br/>
+                    <h3>Simulated Web Browsers:</h3>
+                    <ul>
+                        <li><b>CHROME_16</b> - <em style="color: red;">Warning: highly experimental!!!</em></li>
+                        <li><b>FIREFOX_10</b> - <em style="color: red;">Warning: experimental!!!</em></li>
+                        <li><b>FIREFOX_3_6</b> - Very stable and thoroughly tested</li>
+                        <li><b>INTERNET_EXPLORER_6-8</b> - Stable</li>
+                    </ul>
+                </section>
+
+                <section>
+                    <h3>Supported features:</h3>
+                    <ul>
+                        <li>Canvas</li>
+                        <li>SVG</li>
+                        <li>JavaScript + most of modern frameworks<br/>(jQuery, AngularJS)</li>
+                        <li>HTML5 + CSS3</li>
+                        <li><span style="text-decoration: line-through;">Flash</span></li>
+
+                    </ul>
+                </section>
+
+                <section>
+                    <h2>Most often used</h2>
+                    <ul>
+                        <li>
+                            <p>Interaction with DOM Elements</p>
+                            <ul>
+                                <li>Click links</li>
+                                <li>Fill-in and submit forms</li>
+                            </ul>
+                        </li>
+                        <li>Check for presence of DOM Elements on the page</li>
+                    </ul>
+                </section>
+
+                <!-- TODO: Continue... -->
 
 				<section>
 					<h2>Point of View</h2>
@@ -317,26 +339,8 @@ function linkify( selector ) {
 				</section>
 
 				<section>
-					<h2>It's free</h2>
-					<p>
-						reveal.js and <a href="http://www.rvl.io">rvl.io</a> are entirely free but if you'd like to support the projects you can donate below.
-						Donations will go towards hosting and domain costs.
-					</p>
-					<form action="https://www.paypal.com/cgi-bin/webscr" method="post">
-						<input type="hidden" name="cmd" value="_donations">
-						<input type="hidden" name="business" value="hakim.elhattab@gmail.com">
-						<input type="hidden" name="lc" value="US">
-						<input type="hidden" name="item_name" value="reveal.js / rvl.io">
-						<input type="hidden" name="no_note" value="0">
-						<input type="hidden" name="currency_code" value="USD">
-						<input type="hidden" name="bn" value="PP-DonationsBF:btn_donate_LG.gif:NonHostedGuest">
-						<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-					</form>
-				</section>
-
-				<section>
-					<h1>THE END</h1>
-					<h3>BY Hakim El Hattab / hakim.se</h3>
+					<h1>FIN<em>!!!</em></h1>
+					<h3>BY Roman Dushko / rodush.com</h3>
 				</section>
 
 			</div>
@@ -357,7 +361,7 @@ function linkify( selector ) {
 				center: true,
 
 				theme: Reveal.getQueryHash().theme, // available themes are in /css/theme
-				transition: Reveal.getQueryHash().transition || 'default', // default/cube/page/concave/zoom/linear/fade/none
+				transition: Reveal.getQueryHash().transition || 'page', // default/cube/page/concave/zoom/linear/fade/none
 
 				// Optional libraries used to extend on reveal.js
 				dependencies: [
