--- a/index.html
+++ b/index.html
@@ -62,6 +62,17 @@
                 </section>
 
                 <section>
+                    <h3>Competitors?</h3>
+                    <p>SeleniumRC</p>
+                    <hr/>
+                    <h3>Difference?</h3>
+                    <ul>
+                        <li>No need to have a real web-browser installed</li>
+                        <li>Able to run w/o graphics interface</li>
+                    </ul>
+                </section>
+
+                <section>
                     <h2>What do I need to know?</h2>
                     <ul>
                         <li>Be comfortable with Java syntax</li>
@@ -84,8 +95,9 @@
                 </section>
 
                 <section>
-                    <h3>Supported features:</h3>
+                    <h2>Supported features:</h2>
                     <ul>
+                        <li>XPath (v1.0)</li>
                         <li>Canvas</li>
                         <li>SVG</li>
                         <li>JavaScript + most of modern frameworks<br/>(jQuery, AngularJS)</li>
@@ -113,8 +125,8 @@
 
                 <section>
                     <h3>Input: type() VS setValueAttribute()</h3>
-                    <a href="http://localhost:8080/">Go to example page</a>
-                    <pre><code contenteditable style="font-size: 18px; margin-top: 20px;">
+                    <a href="http://localhost:8000/" target="_blank">Go to example page</a>
+                    <pre><code contenteditable style="font-size: 20px; margin-top: 20px;">
 HtmlPage page2 = (HtmlPage) client.getPage("http://localhost:8000");
 HtmlForm aForm = (HtmlForm) page2.getFormByName("testForm");
 HtmlInput loginInput = (HtmlInput) aForm.getInputByName("login");
@@ -127,19 +139,71 @@ System.out.println( "Here how page looks like after {type}: " + page2.asXml() );
 
                 <section>
                     <h3>WebWindows VS TopLevelWindows</h3>
+                    <a href="http://localhost:8000/examples/page_with_iframes.html" target="_blank">Go to example page</a>
+                    <pre><code contenteditable style="font-size: 25px; line-height: 30px; margin-top: 20px;">
+HtmlPage page = client.getPage( "http://localhost:8000/examples/page_with_iframes.html" );
+
+int openedTopWindowsCnt = client.getTopLevelWindows().size();
+int webWindowsCnt = client.getWebWindows().size();
+
+System.out.println( "We have " + openedTopWindowsCnt + " Top Level windows, and " +
+webWindowsCnt + " web windows currently opened" );
+                    </code></pre>
+                    <h5 style="text-transform: none;"><sup>*</sup>TopLevelWindow - is basically a window inside
+                        a real web-browser (a Tab)</h5>
                 </section>
                 <section>
                     <h3>Default and Custom Alert and Confirm Handlers</h3>
+                    <h5>Default behavior:</h5>
+                    <ul>
+                        <li>Click "OK" in Alert box</li>
+                        <li>Click "Yes" in Confirm dialog</li>
+                    </ul>
+                    <hr/>
+                    <p>If you want log message or click "No" in confirm dialog, then you need overwrite handlers</p>
                 </section>
                 <section>
                     <h3>Attachment handler</h3>
+                    <pre><code>
+// Attach attachment handler
+client.setAttachmentHandler( new CollectingAttachmentHandler() );
+...............do your interaction................
+// now just process everything been collected
+// Here starts downloading of the file...
+List&lt;Attachment&gt; attachments = ((CollectingAttachmentHandler) client.getAttachmentHandler()).getCollectedAttachments();
+// Save file on the disc
+File torrentFile = new File( attachments.get(0).getSuggestedFilename() );
+if( !torrentFile.exists() ){
+    torrentFile.createNewFile();
+}
+</code></pre>
+...
+                    And no any extra (useless) stuff in your browsing history!
                 </section>
+
+                <section>
+                    <h3>File uploading</h3>
+                    <pre><code>
+HtmlForm uploadForm = page.getFormByName("uploadform");
+HtmlFileInput fileInput = uploadForm.getInputByName("Upload File");
+fileInput.setValueAttribute(filePath); // absolute path to a file on disk
+fileInput.setContentType("application/pdf");
+uploadForm.getButtonByName(name).click();
+                    </code></pre>
+                </section>
+
                 <section>
                     <h3>Page.asText() vs Page.asXml()</h3>
+                    <p><strong>asText()</strong> -  this is how page looks tp the end user</p>
+                    <p><strong>asXml()</strong> - this is how page looks after JS were processed and DOM was manipulated</p>
                 </section>
+
                 <section>
                     <h3>Response content as string</h3>
+                    <p>This what you see in response - no DOM manipulation happens.</p>
+                    <p>Useful if you get non Html page, but CSV, TXT or any other type</p>
                 </section>
+
                 <section>
                     <h3>wait VS wait starting before</h3>
                     <pre><code>
@@ -149,224 +213,54 @@ client.waitForBackgroundJavaScriptStartingBefore() - sophisticated
                 </section>
 
                 <section>
-                    <h2>rvl.io</h2>
-                    <p>
-                        If you don't like writing slides in HTML you can use the online editor <a href="http://www.rvl.io" target="_blank">rvl.io</a>.
-                    </p>
-                </section>
-
-                <section>
-                    <h2>Works in Mobile Safari</h2>
-                    <p>
-                        Try it out! You can swipe through the slides and pinch your way to the overview.
-                    </p>
-                </section>
-
-                <section>
-                    <h2>Marvelous Unordered List</h2>
-                    <ul>
-                        <li>No order here</li>
-                        <li>Or here</li>
-                        <li>Or here</li>
-                        <li>Or here</li>
-                    </ul>
-                </section>
-
-                <section>
-                    <h2>Fantastic Ordered List</h2>
-                    <ol>
-                        <li>One is smaller than...</li>
-                        <li>Two is smaller than...</li>
-                        <li>Three!</li>
-                    </ol>
-                </section>
-
-                <section data-markdown>
-                    <script type="text/template">
-                        ## Markdown support
-
-                        For those of you who like that sort of thing. Instructions and a bit more info available [here](https://github.com/hakimel/reveal.js#markdown).
-
-                            <section data-markdown>
-                              ## Markdown support
-
-                              For those of you who like that sort of thing.
-                              Instructions and a bit more info available [here](https://github.com/hakimel/reveal.js#markdown).
-                            </section>
-                    </script>
-                </section>
-
-                <section id="transitions">
-                    <h2>Transition Styles</h2>
-                    <p>
-                        You can select from different transitions, like: <br>
-                        <a href="?transition=cube#/transitions">Cube</a> -
-                        <a href="?transition=page#/transitions">Page</a> -
-                        <a href="?transition=concave#/transitions">Concave</a> -
-                        <a href="?transition=zoom#/transitions">Zoom</a> -
-                        <a href="?transition=linear#/transitions">Linear</a> -
-                        <a href="?transition=fade#/transitions">Fade</a> -
-                        <a href="?transition=none#/transitions">None</a> -
-                        <a href="?#/transitions">Default</a>
-                    </p>
-                </section>
-
-                <section id="themes">
-                    <h2>Themes</h2>
-                    <p>
-                        Reveal.js comes with a few themes built in: <br>
-                        <a href="?theme=sky#/themes">Sky</a> -
-                        <a href="?theme=beige#/themes">Beige</a> -
-                        <a href="?theme=simple#/themes">Simple</a> -
-                        <a href="?theme=serif#/themes">Serif</a> -
-                        <a href="?theme=night#/themes">Night</a> -
-                        <a href="?#/themes">Default</a>
-                    </p>
-                    <p>
-                        <small>
-                            * Theme demos are loaded after the presentation which leads to flicker. In production you should load your theme in the <code>&lt;head&gt;</code> using a <code>&lt;link&gt;</code>.
-                        </small>
-                    </p>
-                </section>
-
-                <section>
-                    <section data-state="alert">
-                        <h2>Global State</h2>
-                        <p>
-                            Set <code>data-state="something"</code> on a slide and <code>"something"</code>
-                            will be added as a class to the document element when the slide is open. This lets you
-                            apply broader style changes, like switching the background.
-                        </p>
-                        <a href="#" class="image navigate-down">
-                            <img width="178" height="238" src="https://s3.amazonaws.com/hakim-static/reveal-js/arrow.png" alt="Down arrow">
-                        </a>
-                    </section>
-                    <section data-state="blackout">
-                        <h2>"blackout"</h2>
-                        <a href="#" class="image navigate-down">
-                            <img width="178" height="238" src="https://s3.amazonaws.com/hakim-static/reveal-js/arrow.png" alt="Down arrow">
-                        </a>
-                    </section>
-                    <section data-state="soothe">
-                        <h2>"soothe"</h2>
-                        <a href="#" class="image navigate-next">
-                            <img width="178" height="238" src="https://s3.amazonaws.com/hakim-static/reveal-js/arrow.png" alt="Up arrow" style="-webkit-transform: rotate(-90deg);">
-                        </a>
-                    </section>
-                </section>
-
-                <section data-state="customevent">
-                    <h2>Custom Events</h2>
-                    <p>
-                        Additionally custom events can be triggered on a per slide basis by binding to the <code>data-state</code> name.
-                    </p>
-                    <pre><code contenteditable style="font-size: 18px; margin-top: 20px;">Reveal.addEventListener( 'customevent', function() {
-    console.log( '"customevent" has fired' );
-} );
+                    <h3>Some more hints...</h3>
+                    <p>Instead of using such huge construction</p>
+                    <pre><code>
+List&lt;HtmlHref&gt; aColl = page.getByXPath( "//a[contains(text(), 'Log out')]" );
+HtmlHref a = aColl.get(0);
+                    </code></pre>
+                    <p>if you only need first element, use this:</p>
+                    <pre><code>
+HtmlHref a = page.getFirstByXPath( "//a[contains(text(, 'Log out'))]" );
                     </code></pre>
                 </section>
 
                 <section>
-                    <h2>Clever Quotes</h2>
-                    <p>
-                        These guys come in two forms, inline: <q cite="http://searchservervirtualization.techtarget.com/definition/Our-Favorite-Technology-Quotations">
-                        The nice thing about standards is that there are so many to choose from</q> and block:
-                    </p>
-                    <blockquote cite="http://searchservervirtualization.techtarget.com/definition/Our-Favorite-Technology-Quotations">
-                        For years there has been a theory that millions of monkeys typing at random on millions of typewriters would
-                        reproduce the entire works of Shakespeare. The Internet has proven this theory to be untrue.
-                    </blockquote>
+...and much much more on <a href="http://htmlunit.sourceforge.net/apidocs/index.html" target="_blank">official API page</a>
                 </section>
 
-                <section>
-                    <h2>Pretty Code</h2>
-                    <pre><code contenteditable>
-function linkify( selector ) {
-  if( supports3DTransforms ) {
+                <!--<section id="transitions">-->
+                    <!--<h2>Transition Styles</h2>-->
+                    <!--<p>-->
+                        <!--You can select from different transitions, like: <br>-->
+                        <!--<a href="?transition=cube#/transitions">Cube</a> --->
+                        <!--<a href="?transition=page#/transitions">Page</a> --->
+                        <!--<a href="?transition=concave#/transitions">Concave</a> --->
+                        <!--<a href="?transition=zoom#/transitions">Zoom</a> --->
+                        <!--<a href="?transition=linear#/transitions">Linear</a> --->
+                        <!--<a href="?transition=fade#/transitions">Fade</a> --->
+                        <!--<a href="?transition=none#/transitions">None</a> --->
+                        <!--<a href="?#/transitions">Default</a>-->
+                    <!--</p>-->
+                <!--</section>-->
 
-    var nodes = document.querySelectorAll( selector );
-
-    for( var i = 0, len = nodes.length; i &lt; len; i++ ) {
-      var node = nodes[i];
-
-      if( !node.className ) ) {
-        node.className += ' roll';
-      }
-    };
-  }
-}
-                    </code></pre>
-                    <p>Courtesy of <a href="http://softwaremaniacs.org/soft/highlight/en/description/">highlight.js</a>.</p>
-                </section>
-
-                <section>
-                    <h2>Intergalactic Interconnections</h2>
-                    <p>
-                        You can link between slides internally,
-                        <a href="#/2/3">like this</a>.
-                    </p>
-                </section>
-
-                <section>
-                    <section>
-                        <h2>Fragmented Views</h2>
-                        <p>Hit the next arrow...</p>
-                        <p class="fragment">... to step through ...</p>
-                        <ol>
-                            <li class="fragment"><code>any type</code></li>
-                            <li class="fragment"><em>of view</em></li>
-                            <li class="fragment"><strong>fragments</strong></li>
-                        </ol>
-
-                        <aside class="notes">
-                            This slide has fragments which are also stepped through in the notes window.
-                        </aside>
-                    </section>
-                    <section>
-                        <h2>Fragment Styles</h2>
-                        <p>There's a few styles of fragments, like:</p>
-                        <p class="fragment grow">grow</p>
-                        <p class="fragment shrink">shrink</p>
-                        <p class="fragment roll-in">roll-in</p>
-                        <p class="fragment fade-out">fade-out</p>
-                        <p class="fragment highlight-red">highlight-red</p>
-                        <p class="fragment highlight-green">highlight-green</p>
-                        <p class="fragment highlight-blue">highlight-blue</p>
-                    </section>
-                </section>
-
-                <section>
-                    <h2>Spectacular image!</h2>
-                    <a class="image" href="http://lab.hakim.se/meny/" target="_blank">
-                        <img width="320" height="299" src="http://s3.amazonaws.com/hakim-static/portfolio/images/meny.png" alt="Meny">
-                    </a>
-                </section>
-
-                <section>
-                    <h2>Export to PDF</h2>
-                    <p>Presentations can be <a href="https://github.com/hakimel/reveal.js#pdf-export">exported to PDF</a>, below is an example that's been uploaded to SlideShare.</p>
-                    <iframe id="slideshare" src="http://www.slideshare.net/slideshow/embed_code/13872948" width="455" height="356" style="margin:0;overflow:hidden;border:1px solid #CCC;border-width:1px 1px 0;margin-bottom:5px" allowfullscreen> </iframe>
-                    <script>
-                        document.getElementById('slideshare').attributeName = 'allowfullscreen';
-                    </script>
-                </section>
-
-                <section>
-                    <h2>Take a Moment</h2>
-                    <p>
-                        Press b or period on your keyboard to enter the 'paused' mode. This mode is helpful when you want to take distracting slides off the screen
-                        during a presentation.
-                    </p>
-                </section>
-
-                <section>
-                    <h2>Stellar Links</h2>
-                    <ul>
-                        <li><a href="https://github.com/hakimel/reveal.js">Source code on GitHub</a></li>
-                        <li><a href="http://hakim.se/projects/reveal-js">Leave feedback on my site</a></li>
-                        <li><a href="http://twitter.com/hakimel">Follow me on Twitter</a></li>
-                    </ul>
-                </section>
+                <!--<section id="themes">-->
+                    <!--<h2>Themes</h2>-->
+                    <!--<p>-->
+                        <!--Reveal.js comes with a few themes built in: <br>-->
+                        <!--<a href="?theme=sky#/themes">Sky</a> --->
+                        <!--<a href="?theme=beige#/themes">Beige</a> --->
+                        <!--<a href="?theme=simple#/themes">Simple</a> --->
+                        <!--<a href="?theme=serif#/themes">Serif</a> --->
+                        <!--<a href="?theme=night#/themes">Night</a> --->
+                        <!--<a href="?#/themes">Default</a>-->
+                    <!--</p>-->
+                    <!--<p>-->
+                        <!--<small>-->
+                            <!--* Theme demos are loaded after the presentation which leads to flicker. In production you should load your theme in the <code>&lt;head&gt;</code> using a <code>&lt;link&gt;</code>.-->
+                        <!--</small>-->
+                    <!--</p>-->
+                <!--</section>-->
 
                 <section>
                     <h1>FIN<em>!!!</em></h1>
